--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-@@include('components/page-blocks/_head.html',{
-"lang":"en",
-"title":"Easy-webdev-startpack v3.0",
-"description":"Gulp pack for easy html/php markup development",
-"keywords":"",
-"favicon":"img/favicons/favicon",
+@@include('components/page-blocks/_head.html', {
+	"lang": "en",
+	"title": "eCommerce template",
+	"description": "Wembley eCommerce template.",
+	"keywords": "",
+	"favicon": "img/favicons/favicon",
+	"iconmoon": "https://i.icomoon.io/public/temp/3f8989f8a5/UntitledProject/style.css",
 })
 
 <body>
 	@@include('components/page-blocks/_header.html')
-	<main class="main"></main>
+	@@include('components/page-blocks/_top-menu.html')
+	<div class="container">
+		<div class="row">
+			@@include('components/page-blocks/_navbar.html')
+			<main class="main"></main>
+		</div>
+	</div>
 	@@include('components/page-blocks/_footer.html')
 	@@include('components/page-blocks/_scripts.html')
 </body>
